--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,10 @@ matplotlib==3.9.2
 numpy==2.1.1
 pandas==2.2.3
 streamlit==1.39.0
+
+yfinance~=0.2.44
+
+fredapi~=0.5.2
 plotly==5.24.1
 yfinance
 seaborn
