--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-matplotlib==3.9.2
-numpy==2.1.1
+numpy>=1.26.0
 pandas==2.2.3
+matplotlib>=3.8.2
 streamlit==1.39.0
 
-yfinance~=0.2.44
-
-fredapi~=0.5.2
+yfinance==0.2.44
+fredapi==0.5.2
 plotly==5.24.1
-yfinance
-seaborn
-statsmodels
-scikit-learn>=1.3.0
+seaborn==0.13.2
+statsmodels==0.14.2
+scikit-learn==1.2.2
 
-shap
+shap==0.43.0
+
+
