--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-numpy>=1.26.0
+numpy==1.26.4
 pandas==2.2.3
-matplotlib>=3.8.2
+matplotlib==3.8.2
 streamlit==1.39.0
 
 yfinance==0.2.44
@@ -9,5 +9,7 @@ plotly==5.24.1
 seaborn==0.13.2
 statsmodels==0.14.2
 scikit-learn==1.2.2
+scipy==1.12.0
 
 shap==0.43.0
+
